--- a/style.css
+++ b/style.css
@@ -2,27 +2,7 @@
 	margin: 0;
 	padding: 0;
 }
-body {
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-    background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
-    width:85%;
-    padding:10 14%;
-    height:752px;
-}
-
-@keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
-}
-html {
+html,html{
 	height: 100%;
 	width: 100%;	
 }
